# palm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: AppStates.hpp  Emitter.hpp  EntityInfo.hpp  Film.hpp  GraphicsPass.hpp  Integrator.hpp  Material.hpp  MaterialTable.hpp  Mesh.hpp  Scene.hpp  Transform.hpp
include/Integrators/: Integrator.hpp  PathIntegrator.hpp  ReSTIRIntegrator.hpp
include/States/: Editor.hpp  MaterialViewer.hpp  Renderer.hpp
shaders/GLSL/raster/: fragment.frag  lighting.frag
shaders/PathTracing/: closesthit.rchit  common.glsl  compute.comp  raygen.rgen  raygen_mod.rgen
shaders/Slang/Emitter/: Emitter.slang
shaders/Slang/Integrators/: PathIntegrator.slang  ReSTIRIntegrator.slang
shaders/Slang/Material/: Conductor.slang  Dielectric.slang  GGX.slang  IMaterial.slang  Lambert.slang  Material.slang  PBR.slang  Principle.slang  Principle_backup.slang
shaders/Slang/Python/: debug.py
shaders/Slang/Rasterize/Deferred/: Geometry.slang  Lighting.slang
shaders/Slang/Sampler/: ISampler.slang  IndependentSampler.slang  Sampler.slang
shaders/Slang/Utility/: Color.slang  Constants.slang  Frame.slang  Reservoir.slang  SurfaceInteraction.slang  Warp.slang
shaders/Slang/rasterize/: Geometry.slang  Lighting.slang
shaders/raster/: geometry.frag  geometry.vert
shaders/rasterize/: Geometry.vert  fragment.frag
src/: CMakeLists.txt  Film.cpp  Integrator.cpp  MaterialTable.cpp  Scene.cpp  cache.cpp  main.cpp
src/Integrators/: Integrator.cpp  PathIntegrator.cpp  ReSTIRIntegrator.cpp
src/States/: Editor.cpp  MaterialViewer.cpp  Renderer.cpp
